[tool.poetry]
name = "kan0-api"
version = "0.1.0"
description = ""
authors = ["Alberto Cano <soniccano2@gmail.com>"]
readme = "README.md"
packages = [{include = "kan0_api"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.87.0"
uvicorn = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
